@@ -65,6 +65,7 @@ private:
   void decode_name_( Spell* const, TiXmlElement const * const );
   void decode_school_( Spell* const, TiXmlElement const * const );
   void decode_level_( Spell* const, TiXmlElement const * const );
+  void decode_casting_time_( Spell *const, TiXmlElement const *const );
 };
 
 class Spell_RefPtr
